--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Web3 connection
-VITE_RPC_ENDPOINT="https://mainnet.helius-rpc.com/?api-key=e39dac61-a0be-4d40-954a-d4f385d93f28"
-#VITE_RPC_ENDPOINT="https://devnet.helius-rpc.com/?api-key=e39dac61-a0be-4d40-954a-d4f385d93f28"
+#VITE_RPC_ENDPOINT="https://mainnet.helius-rpc.com/?api-key=e39dac61-a0be-4d40-954a-d4f385d93f28"
+VITE_RPC_ENDPOINT="https://devnet.helius-rpc.com/?api-key=e39dac61-a0be-4d40-954a-d4f385d93f28"
 # VITE_RPC_ENDPOINT="http://127.0.0.1:8899"
